# better-start

./: .gitignore  README.md  docker-compose.yml  next.config.mjs  package-lock.json  package.json  requirements.txt
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/core/: config.py
backend/src/enums/: __init__.py  enums.py
backend/src/features/: __init__.py
backend/src/features/ai_tools/: gemini_router.py
backend/src/features/company/: company_router.py  company_schemas.py  company_services.py
backend/src/features/dashboard/: dashb_routers.py  dashb_schemas.py  dashb_services.py
backend/src/features/hr_management/: hr_controllers.py  hr_router.py  hr_schemas.py  hr_services.py
backend/src/features/kanban/: README.md  __init__.py  project_router.py  project_schemas.py  project_services.py  task_router.py  task_schemas.py  task_services.py
backend/src/features/sales/: __init__.py  sales_router.py  sales_schemas.py  (+1 more)
backend/src/models/: __init__.py  company_models.py  hr_models.py  project_models.py  sales_models.py  task_models.py
backend/src/schemas/: __init__.py  global_schemas.py
backend/src/security/: hashing.py  oauth2.py
backend/src/services/: email.py  s3.py
backend/src/utils/: jwt_utils.py
worker/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  RunWorker.py  pyproject.toml  requirements.txt
worker/app/: config.py  worker.py
worker/app/services/: llm_service.py  s3.py
worker/app/utilities/: pdf_reader.py  schemas.py
(+241 files in other folders)
