[project]
name = "better-start-worker"
version = "0.1.0"
description = "RabbitMQ worker for Better Start"
readme = "README.md"
requires-python = ">=3.10"


dependencies = [
    "boto3>=1.40.9",
    "google-generativeai>=0.8.5",
    "openai>=1.99.9",
    "pika>=1.3.2",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pypdf>=6.0.0",
    "python-multipart>=0.0.20",
    "tenacity>=9.1.2",
]
